--- a/docs/reference/planners/tags/ipc2011.md
+++ b/docs/reference/planners/tags/ipc2011.md
@@ -28,3 +28,4 @@ For more information on this competition, please refer to the original competiti
 |---------|-------|
 | **A**   |       |      
 | ACOPlan & ACOPlan 2 | [Guide Page](/ref/planners/acoplan) \| Home Page [Not Found] \| [Paper](https://www.aaai.org/ocs/index.php/FLAIRS/2009/paper/download/116/276) |
+| Arvand | [Guide Page](/ref/planners/arvand) \| Home Page [Not Found] \| [Paper](https://webdocs.cs.ualberta.ca/~mmueller/ps/arvand-art-of-random-walks.pdf) |
