Begun adding planner papers

--- a/docs/reference/planners/tags/ipc2011.md
+++ b/docs/reference/planners/tags/ipc2011.md
@@ -27,6 +27,6 @@ For more information on this competition, please refer to the original competiti
 | Planner | Links |
 |---------|-------|
 | **A**   |       |      
-| ACOPlan & ACOPlan 2 | [Guide Page](/ref/planners/acoplan) \| Home Page [Not Found] \| [Paper](https://www.aaai.org/ocs/index.php/FLAIRS/2009/paper/download/116/276) |
-| Arvand | [Guide Page](/ref/planners/arvand) \| Home Page [Not Found] \| [Paper](https://webdocs.cs.ualberta.ca/~mmueller/ps/arvand-art-of-random-walks.pdf) |
-| Arvandherd | [Guide Page](/ref/planners/arvandherd) \| Home Page [Not Found] \| [Paper](https://webdocs.cs.ualberta.ca/~mmueller/ps/2011/2011-arvandherd-IPC-booklet.pdf) |
+| ACOPlan & ACOPlan 2 | [Guide Page](/ref/planners/acoplan) \| Home Page [Not Found] \| {% paper_link Paper acoplan 1 %} |
+| Arvand | [Guide Page](/ref/planners/arvand) \| Home Page [Not Found] \| {% paper_link Paper arvand 1 %} |
+| Arvandherd | [Guide Page](/ref/planners/arvandherd) \| Home Page [Not Found] \| {% paper_link Paper arvandherd 1 %} |
