--- a/docs/reference/planners/tags/ipc2014.md
+++ b/docs/reference/planners/tags/ipc2014.md
@@ -29,4 +29,5 @@ For more information on this competition, please refer to the original competiti
 | Planner | Links |
 |---------|-------|
 | **A**   |       |      
+| AllPACA | [Guide Page](/ref/planners/allpaca) \| Home Page [Not Found] \| {% paper_link Paper ipcbooklet2014 81 %} |
 | AllPACA | [Guide Page](/ref/planners/allpaca) \| Home Page [Not Found] \| [Paper](https://helios.hud.ac.uk/scommv/IPC-14/repository/booklet2014.pdf) |
