updated planners and cited papers to new linking system

--- a/docs/reference/planners/tags/ipc2011.md
+++ b/docs/reference/planners/tags/ipc2011.md
@@ -27,6 +27,6 @@ For more information on this competition, please refer to the original competiti
 | Planner | Links |
 |---------|-------|
 | **A**   |       |      
-| ACOPlan & ACOPlan 2 | [Guide Page](/ref/planners/acoplan) \| Home Page [Not Found] \| {% paper_link Paper acoplan 1 %} |
-| Arvand | [Guide Page](/ref/planners/arvand) \| Home Page [Not Found] \| {% paper_link Paper arvand 1 %} |
-| Arvandherd | [Guide Page](/ref/planners/arvandherd) \| Home Page [Not Found] \| {% paper_link Paper arvandherd 1 %} |
+| {% planner ACOPlan %} (& ACOPlan 2) | Home Page [Not Found] \| {% paper_link Paper planners/acoplan 1 %} |
+| {% planner Arvand %} | Home Page [Not Found] \| {% paper_link Paper planners/arvand 1 %} |
+| {% planner Arvandherd %} | Home Page [Not Found] \| {% paper_link Paper planners/arvandherd 1 %} |
