--- a/docs/reference/planners/tags/ipc2018.md
+++ b/docs/reference/planners/tags/ipc2018.md
@@ -23,4 +23,4 @@ For more information on this competition, please refer to the original competiti
 | Planner | Links |
 |---------|-------|
 | **A**   |       |      
-| Alien | [Guide Page](/ref/planners/alien) \| Home Page [Not Found] \| [Paper](https://ipc2018-classical.bitbucket.io/planner-abstracts/team33.pdf) |
+| {% planner Alien %} | Home Page [Not Found] \| {% paper_link Paper planners/alien 0 %} |
