--- a/docs/reference/planners/tags/ipc2014.md
+++ b/docs/reference/planners/tags/ipc2014.md
@@ -29,5 +29,5 @@ For more information on this competition, please refer to the original competiti
 | Planner | Links |
 |---------|-------|
 | **A**   |       |      
-| AllPACA | [Guide Page](/ref/planners/allpaca) \| Home Page [Not Found] \| {% paper_link Paper ipcbooklet2014 81 %} |
-| AllPACA | [Guide Page](/ref/planners/allpaca) \| Home Page [Not Found] \| [Paper](https://helios.hud.ac.uk/scommv/IPC-14/repository/booklet2014.pdf) |
+| {% planner Guide Page AllPACA %} | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2014 81 %} |
+| {% planner Guide Page BiFD %} | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2014 18 %} |
