--- a/docs/reference/planners/tags/ipc2011.md
+++ b/docs/reference/planners/tags/ipc2011.md
@@ -30,3 +30,5 @@ For more information on this competition, please refer to the original competiti
 | {% planner ACOPlan %} (& ACOPlan 2) | Home Page [Not Found] \| {% paper_link Paper planners/acoplan 1 %} |
 | {% planner Arvand %} | Home Page [Not Found] \| {% paper_link Paper planners/arvand 1 %} |
 | {% planner Arvandherd %} | Home Page [Not Found] \| {% paper_link Paper planners/arvandherd 1 %} |
+| **B**   |       |
+| {% planner BJOLP %} | Home Page [Not Found] \| {% paper_link Paper planners/bjolp 1 %} |
