Made A to Zs consistent

--- a/docs/reference/planners/tags/ipc2014.md
+++ b/docs/reference/planners/tags/ipc2014.md
@@ -29,6 +29,6 @@ For more information on this competition, please refer to the original competiti
 | Planner | Links |
 |---------|-------|
 | **A**   |       |      
-| {% planner Guide Page AllPACA %} | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2014 81 %} |
+| {% planner AllPACA %} | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2014 81 %} |
 | **B**   |       |
-| {% planner Guide Page BiFD %} | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2014 18 %} |
+| {% planner BiFD %} | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2014 18 %} |
