Updated CBP to be included in A to |

--- a/docs/reference/planners/tags/ipc2011.md
+++ b/docs/reference/planners/tags/ipc2011.md
@@ -33,3 +33,5 @@ For more information on this competition, please refer to the original competiti
 | **B**   |       |
 | {% planner BJOLP %} | Home Page [Not Found] \| {% paper_link Paper planners/bjolp 1 %} |
 | {% planner BRT %} | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2011 17 %} |
+| **C**   |       |      |
+| {% planner CBP %} (& CBP2) | Home Page [Not Found] \| {% paper_link IPC 2011 Booklet ipcbooklets/2011 21 %} |
