Added cerberus to tag pages and A to Z

--- a/docs/reference/planners/tags/ipc2018.md
+++ b/docs/reference/planners/tags/ipc2018.md
@@ -24,3 +24,5 @@ For more information on this competition, please refer to the original competiti
 |---------|-------|
 | **A**   |       |      
 | {% planner Alien %} | Home Page [Not Found] \| {% paper_link Paper planners/alien 0 %} |
+| **C**   |       |
+| {$ planner Cerberus %} (& Cerberus-gl) | {% paper_link Paper planners/cerberus 1 %} |
