--- a/docs/reference/planners/tags/ipc2011.md
+++ b/docs/reference/planners/tags/ipc2011.md
@@ -34,4 +34,4 @@ For more information on this competition, please refer to the original competiti
 | {% planner BJOLP %} | Home Page [Not Found] \| {% paper_link Paper planners/bjolp 1 %} |
 | {% planner BRT %} | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2011 17 %} |
 | **C**   |       |      |
-| {% planner CBP %} (& CBP2) | Home Page [Not Found] \| {% paper_link IPC 2011 Booklet ipcbooklets/2011 21 %} |
+| {% planner CBP %} (& CBP2) | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2011 21 %} |
