--- a/docs/reference/planners/tags/ipc2018.md
+++ b/docs/reference/planners/tags/ipc2018.md
@@ -26,3 +26,4 @@ For more information on this competition, please refer to the original competiti
 | {% planner Alien %} | Home Page [Not Found] \| {% paper_link Paper planners/alien 0 %} |
 | **C**   |       |
 | {$ planner Cerberus %} (& Cerberus-gl) | {% paper_link Paper planners/cerberus 1 %} |
+| {% planner Complementary %} (1 & 2) | Home Page [Not Found] \| {% paper_link Paper planners/complementary1 1 %}, {% paper_link Paper planners/complementary2 1 %} |
