Added coplan to planning wiki

--- a/docs/reference/planners/tags/ipc2008.md
+++ b/docs/reference/planners/tags/ipc2008.md
@@ -27,3 +27,4 @@ The planners listed below are participating planners in the International Planni
 |---------|-------|
 | **C**   |       |
 | {% planner CFDP %} | Home Page [Not Found] \| {% paper_link Paper planners/cfdp 1 %} |
+| {% planner CoPlan } (styled Co-Plan) | Home Page [Not Found] \| {% paper_link Paper planners/coplan 1 %} |
