Added CPT and IPC04 06

--- a/docs/reference/planners/tags/ipc2011.md
+++ b/docs/reference/planners/tags/ipc2011.md
@@ -35,3 +35,4 @@ For more information on this competition, please refer to the original competiti
 | {% planner BRT %} | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2011 17 %} |
 | **C**   |       |
 | {% planner CBP %} (& CBP2) | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2011 21 %} |
+| {% planner CPT %} (& 2, 3 & 4) | [Home Page](http://v.vidal.free.fr/onera/#cpt) \| {% paper_link Paper (CPT) planners/cpt 1 %}, {% paper_link Paper (CPT 2) planners/cpt2 1 %}, {% paper_link Paper (CPT 4) ipcbooklets/2011 25 %} |
