--- a/docs/reference/planners/tags/ipc2008.md
+++ b/docs/reference/planners/tags/ipc2008.md
@@ -26,5 +26,6 @@ The planners listed below are participating planners in the International Planni
 | Planner | Links |
 |---------|-------|
 | **C**   |       |
+| {% planner C3 %} | Home page [Not Found] \| {% paper_link Paper planners/c3 1 %} |
 | {% planner CFDP %} | Home Page [Not Found] \| {% paper_link Paper planners/cfdp 1 %} |
 | {% planner CoPlan } (styled Co-Plan) | Home Page [Not Found] \| {% paper_link Paper planners/coplan 1 %} |
