Fixed a minor tagging issue in AllPACA added DecStar

--- a/docs/reference/planners/tags/ipc2018.md
+++ b/docs/reference/planners/tags/ipc2018.md
@@ -28,3 +28,5 @@ For more information on this competition, please refer to the original competiti
 | {$ planner Cerberus %} (& Cerberus-gl) | {% paper_link Paper planners/cerberus 1 %} |
 | {% planner Complementary %} (1 & 2) | Home Page [Not Found] \| {% paper_link Paper planners/complementary1 1 %}, {% paper_link Paper planners/complementary2 1 %} |
 | {% planner CP4TP %} | Home Page [Not Found] \| {% paper_link Paper planners/cp4tp 1 %} |
+| **D**   |       |
+| {% planner DecStar %} | Home Page \| {% paper_link Paper planners/decstar 1 %} |
