--- a/docs/reference/planners/tags/ipc2018.md
+++ b/docs/reference/planners/tags/ipc2018.md
@@ -30,3 +30,4 @@ For more information on this competition, please refer to the original competiti
 | {% planner CP4TP %} | Home Page [Not Found] \| {% paper_link Paper planners/cp4tp 1 %} |
 | **D**   |       |
 | {% planner DecStar %} | Home Page \| {% paper_link Paper planners/decstar 1 %} |
+| {% planner Delfi %} (1 & 2) | Home Page [Not Found] \| {% paper_link Paper planners/delfi 1 %} |
