added DPMPlan (and MIPlan - you're welcome future Adam)

--- a/docs/reference/planners/tags/ipc2014.md
+++ b/docs/reference/planners/tags/ipc2014.md
@@ -34,3 +34,5 @@ For more information on this competition, please refer to the original competiti
 | {% planner BiFD %} | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2014 18 %} |
 | **C**   |       |
 | {% planner cGamer %} | Home page [Not Found] \| {% paper_link Paper ipcbooklets/2014 84 %} |
+| **D**   |       |
+| {% planner DPMPlan %} | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2014 23 %} |
