Fast Downwards done!!

--- a/docs/reference/planners/tags/ipc2014.md
+++ b/docs/reference/planners/tags/ipc2014.md
@@ -36,3 +36,5 @@ For more information on this competition, please refer to the original competiti
 | {% planner cGamer %} | Home page [Not Found] \| {% paper_link Paper ipcbooklets/2014 84 %} |
 | **D**   |       |
 | {% planner DPMPlan %} | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2014 23 %} |
+| **F**   |       |
+| The Fast Downward Planning System (and all other FD brand planners) | [Home Page](http://www.fast-downward.org/) \| {% paper_link Paper planners/fd 1 %} |
