--- a/docs/reference/planners/tags/ipc2006.md
+++ b/docs/reference/planners/tags/ipc2006.md
@@ -21,3 +21,5 @@ The planners listed below are participating planners in the International Planni
 |---------|-------|
 | **C**   |       |
 | {% planner CPT %} (& 2, 3 & 4) | [Home Page](http://v.vidal.free.fr/onera/#cpt) \| {% paper_link Paper (CPT) planners/cpt 1 %}, {% paper_link Paper (CPT 2) planners/cpt2 1 %}, {% paper_link Paper (CPT 4) ipcbooklets/2011 25 %} |
+| **F**   |       |
+| The Fast Downward Planning System (and all other FD brand planners) | [Home Page](http://www.fast-downward.org/) \| {% paper_link Paper planners/fd 1 %} |
