--- a/docs/reference/planners/tags/ipc2008.md
+++ b/docs/reference/planners/tags/ipc2008.md
@@ -29,3 +29,5 @@ The planners listed below are participating planners in the International Planni
 | {% planner C3 %} | Home page [Not Found] \| {% paper_link Paper planners/c3 1 %} |
 | {% planner CFDP %} | Home Page [Not Found] \| {% paper_link Paper planners/cfdp 1 %} |
 | {% planner CoPlan %} (styled Co-Plan) | Home Page [Not Found] \| {% paper_link Paper planners/coplan 1 %} |
+| **F**   |       |
+| The Fast Downward Planning System (and all other FD brand planners) | [Home Page](http://www.fast-downward.org/) \| {% paper_link Paper planners/fd 1 %} |
