--- a/docs/reference/planners/tags/ipc2018.md
+++ b/docs/reference/planners/tags/ipc2018.md
@@ -31,3 +31,5 @@ For more information on this competition, please refer to the original competiti
 | **D**   |       |
 | {% planner DecStar %} | Home Page \| {% paper_link Paper planners/decstar 1 %} |
 | {% planner Delfi %} (1 & 2) | Home Page [Not Found] \| {% paper_link Paper planners/delfi 1 %} |
+| **F**   |       |
+| The Fast Downward Planning System (and all other FD brand planners) | [Home Page](http://www.fast-downward.org/) \| {% paper_link Paper planners/fd 1 %} |
