Fixed mistake in Fast Downward page

--- a/docs/reference/planners/tags/ipc2008.md
+++ b/docs/reference/planners/tags/ipc2008.md
@@ -30,4 +30,4 @@ The planners listed below are participating planners in the International Planni
 | {% planner CFDP %} | Home Page [Not Found] \| {% paper_link Paper planners/cfdp 1 %} |
 | {% planner CoPlan %} (styled Co-Plan) | Home Page [Not Found] \| {% paper_link Paper planners/coplan 1 %} |
 | **F**   |       |
-| The Fast Downward Planning System (and all other FD brand planners) | [Home Page](http://www.fast-downward.org/) \| {% paper_link Paper planners/fd 1 %} |
+| {% planner FD %} The Fast Downward Planning System (and all other FD brand planners) | [Home Page](http://www.fast-downward.org/) \| {% paper_link Paper planners/fd 1 %} |
