--- a/docs/reference/planners/tags/ipc2011.md
+++ b/docs/reference/planners/tags/ipc2011.md
@@ -39,4 +39,4 @@ For more information on this competition, please refer to the original competiti
 | **D**   |       |
 | {% planner DAEYAHSP %} (styled DAE-YAHSP) | Home Page [Not Found] \| {% paper_link Paper planners/daeyahsp 1 %} |
 | **F**   |       |
-| The Fast Downward Planning System (and all other FD brand planners) | [Home Page](http://www.fast-downward.org/) \| {% paper_link Paper planners/fd 1 %} |
+| {% planner FD %} The Fast Downward Planning System (and all other FD brand planners) | [Home Page](http://www.fast-downward.org/) \| {% paper_link Paper planners/fd 1 %} |
