--- a/docs/reference/planners/tags/ipc2014.md
+++ b/docs/reference/planners/tags/ipc2014.md
@@ -37,4 +37,4 @@ For more information on this competition, please refer to the original competiti
 | **D**   |       |
 | {% planner DPMPlan %} | Home Page [Not Found] \| {% paper_link Paper ipcbooklets/2014 23 %} |
 | **F**   |       |
-| The Fast Downward Planning System (and all other FD brand planners) | [Home Page](http://www.fast-downward.org/) \| {% paper_link Paper planners/fd 1 %} |
+| {% planner FD %} The Fast Downward Planning System (and all other FD brand planners) | [Home Page](http://www.fast-downward.org/) \| {% paper_link Paper planners/fd 1 %} |
