--- a/docs/reference/planners/tags/ipc2008.md
+++ b/docs/reference/planners/tags/ipc2008.md
@@ -31,3 +31,5 @@ The planners listed below are participating planners in the International Planni
 | {% planner CoPlan %} (styled Co-Plan) | Home Page [Not Found] \| {% paper_link Paper planners/coplan 1 %} |
 | **F**   |       |
 | {% planner FD %} The Fast Downward Planning System (and all other FD brand planners) | [Home Page](http://www.fast-downward.org/) \| {% paper_link Paper planners/fd 1 %} |
+| **G**   |       |
+| {% planner Gamer %} | Home page [Not Found] \| {% paper_link Paper planners/gamer 1 %} |
