Fix Cerberus links in ipc2018 & satisfycing

--- a/docs/reference/planners/tags/ipc2018.md
+++ b/docs/reference/planners/tags/ipc2018.md
@@ -25,7 +25,7 @@ For more information on this competition, please refer to the original competiti
 | **A**   |       |      
 | {% planner Alien %} | Home Page [Not Found] \| {% paper_link Paper planners/alien 0 %} |
 | **C**   |       |
-| {$ planner Cerberus %} (& Cerberus-gl) | {% paper_link Paper planners/cerberus 1 %} |
+| {% planner Cerberus %} (& Cerberus-gl) | {% paper_link Paper planners/cerberus 1 %} |
 | {% planner Complementary %} (1 & 2) | Home Page [Not Found] \| {% paper_link Paper planners/complementary1 1 %}, {% paper_link Paper planners/complementary2 1 %} |
 | {% planner CP4TP %} | Home Page [Not Found] \| {% paper_link Paper planners/cp4tp 1 %} |
 | **D**   |       |
